--- a/style.css
+++ b/style.css
@@ -1,3 +1,7 @@
+body {
+    background: #333333;
+}
+
 .header {
     height: 10em;
     display: flex;
@@ -5,6 +9,10 @@
     align-items: center;
     justify-content: center;
     margin: 0;
+    color: white;
+    font-family: 'Mansalva', cursive;
+
+
     
 }
 
@@ -15,5 +23,6 @@
     align-items: center;
     justify-content: center;
     margin: 0;   
+    
 }
 
